--- a/moonraker.conf
+++ b/moonraker.conf
@@ -31,14 +31,13 @@ log_path: /home/pi/klipper_logs
 [history]
 
 [update_manager]
-channel: dev
+enable_auto_refresh: False
 
-[update_manager mainsail]
+[update_manager client mainsail]
 type: web
-channel: beta
+#channel: beta
 repo: mainsail-crew/mainsail
 path: ~/mainsail
-refresh_interval: 24
 
 [update_manager webcamd]
 type: git_repo
