--- a/printer.cfg
+++ b/printer.cfg
@@ -10,7 +10,8 @@
 #####################################################################
 # Obtain definition by "ls -l /dev/serial/by-id/"
 #####################################################################
-serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_440039000150414235363020-if00
+#serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_440039000150414235363020-if00
+serial: /dev/ttyAMA0
 
 [printer]
 kinematics: corexy
@@ -169,25 +170,25 @@ max_temp: 120
 #	Fan Control
 #####################################################################
 
-[heater_fan hotend_fan]
+#[heater_fan hotend_fan]
 # Hotend Fan
-pin: PC6
-max_power: 1.0
-kick_start_time: 0.5
-heater: extruder
-heater_temp: 50.0
+#pin: PC6
+#max_power: 1.0
+#kick_start_time: 0.5
+#heater: extruder
+#heater_temp: 50.0
 
-[fan]
+#[fan]
 # Part Cooling Fan
-pin: PC7
-max_power: 1.0
-kick_start_time: 0.5
-off_below: 0.13
-cycle_time: 0.010
+#pin: PC7
+#max_power: 1.0
+#kick_start_time: 0.5
+#off_below: 0.13
+#cycle_time: 0.010
 
 [fan_generic chamber_fan]
 # Chamber Fan
-pin: PB15
+pin: PC6
 max_power: 1.0
 kick_start_time: 0.5
 off_below: 0.13
