--- a/klicky-screws-tilt-calculate.cfg
+++ b/klicky-screws-tilt-calculate.cfg
@@ -11,8 +11,8 @@
 
 ###################
 ## Screws Tilt Adjust
-[gcode_macro BED_SCREWS_ADJUST]
-rename_existing: _BED_SCREWS_ADJUST
+[gcode_macro SCREWS_TILT_CALCULATE]
+rename_existing: _SCREWS_TILT_CALCULATE
 description: 
 gcode:
     {% set V = printer["gcode_macro _User_Variables"].verbose %}
@@ -23,6 +23,7 @@ gcode:
     _CheckProbe action=query
 	G90
     Attach_Probe
+    _KLICKY_STATUS_LEVELING
 
     _SCREWS_TILT_CALCULATE {% for p in params
           %}{'%s=%s ' % (p, params[p])}{%
