--- a/klicky-specific.cfg
+++ b/klicky-specific.cfg
@@ -1,10 +1,10 @@
 [probe]
 #with Long Klicky Probe
-pin: ^PC15
+pin: EBBCan: PB5
 x_offset: 10 #(9.5 with front cowling)
 y_offset: 2
 z_offset: 16
-speed: 7
+speed: 5
 lift_speed: 7
 
 samples: 3
@@ -31,3 +31,13 @@ fade_target: 0
 split_delta_z: 0.0125
 mesh_pps: 2,2
 
+[screws_tilt_adjust]
+screw1: 110,115
+screw1_name: rear right
+screw2: 0, 115
+screw2_name: rear left
+screw3: 55, 5
+screw3_name: front center
+horizontal_move_z: 20
+speed: 50
+screw_thread: CW-M3
