--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,34 +1,30 @@
+#####################################################################
+#  Moonraker Config
+#####################################################################
 [server]
 host: 0.0.0.0
 port: 7125
-enable_debug_logging: False
-klippy_uds_address: /tmp/klippy_uds
 
-[database]
-database_path: /home/pi/.moonraker_database
+[file_manager]
+config_path: ~/klipper_config
+log_path: ~/klipper_logs
 
 [authorization]
+cors_domains:
+    https://my.mainsail.xyz
+    http://my.mainsail.xyz
+    http://*.local
 trusted_clients:
     10.0.0.0/8
     127.0.0.0/8
+    127.0.0.1
     169.254.0.0/16
     172.16.0.0/12
     192.168.0.0/16
     FE80::/10
     ::1/128
-cors_domains:
-    *.lan
-    *.local
-    *://my.mainsail.xyz
-    *://app.fluidd.xyz
-
-[file_manager]
-config_path: /home/pi/klipper_config
-log_path: /home/pi/klipper_logs
 
 [octoprint_compat]
-
-[history]
 
 [update_manager]
 enable_auto_refresh: False
