--- a/printer.cfg
+++ b/printer.cfg
@@ -5,13 +5,12 @@
 [include print_start.cfg]
 [include variables.cfg]
 [include klicky-probe.cfg]
+[include toolhead.cfg]
+[include inputshaper.cfg]
 
 [mcu]
-#####################################################################
-# Obtain definition by "ls -l /dev/serial/by-id/"
-#####################################################################
-#serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_440039000150414235363020-if00
 serial: /dev/ttyAMA0
+restart_method: command
 
 [printer]
 kinematics: corexy
@@ -32,6 +31,14 @@ gcode:
 ###########################################################################
 ###########################################################################
 
+[temperature_sensor SKR]
+sensor_type: temperature_mcu
+sensor_mcu: mcu
+
+[temperature_sensor Toolhead]
+sensor_type: temperature_mcu
+sensor_mcu: EBBCan
+
 #####################################################################
 #      X/Y Stepper Settings
 #####################################################################
@@ -43,7 +50,7 @@ enable_pin: !PB14
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation: 200
-endstop_pin: ^PC0 
+endstop_pin: EBBCan: PB6
 position_endstop: 120
 position_max: 120
 homing_speed: 50
@@ -110,46 +117,6 @@ sense_resistor: 0.110
 stealthchop_threshold: 999999
 
 #####################################################################
-#   Extruder
-#####################################################################
-
-[extruder]
-step_pin: PB3
-dir_pin: PB4
-enable_pin: !PD1
-full_steps_per_rotation: 200
-rotation_distance: 22.67895
-gear_ratio: 50:10
-microsteps: 16
-nozzle_diameter: 0.400
-filament_diameter: 1.750
-heater_pin: PC8
-sensor_type: Generic 3950
-sensor_pin: PA0
-#control: pid
-#pid_Kp: 28.182
-#pid_Ki: 1.978
-#pid_Kd: 100.397
-min_temp: 0
-max_temp: 270
-min_extrude_temp: 170
-max_extrude_only_distance: 1400.0
-max_extrude_cross_section: 0.8
-max_extrude_only_velocity: 75.0
-max_extrude_only_accel: 1500
-pressure_advance: 0.0
-pressure_advance_smooth_time: 0.040
-
-[tmc2209 extruder]
-uart_pin: PC11
-tx_pin: PC10
-uart_address: 3
-interpolate: True
-run_current: 0.3
-sense_resistor: 0.110
-stealthchop_threshold: 0
-
-#####################################################################
 #   Bed Heater
 #####################################################################
 
@@ -170,25 +137,9 @@ max_temp: 120
 #	Fan Control
 #####################################################################
 
-#[heater_fan hotend_fan]
-# Hotend Fan
-#pin: PC6
-#max_power: 1.0
-#kick_start_time: 0.5
-#heater: extruder
-#heater_temp: 50.0
-
-#[fan]
-# Part Cooling Fan
-#pin: PC7
-#max_power: 1.0
-#kick_start_time: 0.5
-#off_below: 0.13
-#cycle_time: 0.010
-
-[fan_generic chamber_fan]
 # Chamber Fan
-pin: PC6
+[fan_generic chamber_fan]
+pin: PB15
 max_power: 1.0
 kick_start_time: 0.5
 off_below: 0.13
@@ -219,11 +170,6 @@ gcode:
 
 [idle_timeout]
 timeout: 1800
-
-#[safe_z_home]
-#home_xy_position: 120,120
-#speed: 50.0
-#z_hop: 5
 
 [bed_screws]
 screw1: 60,5
@@ -294,19 +240,19 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [extruder]
+#*# pid_kp = 28.122
+#*# pid_ki = 2.083
+#*# pid_kd = 94.909
 #*# control = pid
-#*# pid_kp = 29.169
-#*# pid_ki = 2.371
-#*# pid_kd = 89.696
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 63.362
-#*# pid_ki = 1.525
-#*# pid_kd = 658.175
+#*# pid_kp = 60.695
+#*# pid_ki = 1.574
+#*# pid_kd = 584.944
 #*#
 #*# [stepper_z]
-#*# position_endstop = -0.195
+#*# position_endstop = 0.165
 #*#
 #*# [bed_mesh default]
 #*# version = 1
@@ -330,3 +276,9 @@ gcode:
 #*# max_y = 105.0
 #*# mesh_x_pps = 2
 #*# max_x = 105.0
+#*#
+#*# [input_shaper]
+#*# shaper_type_x = zv
+#*# shaper_freq_x = 85.0
+#*# shaper_type_y = zv
+#*# shaper_freq_y = 93.6
