--- a/hardware/inputshaper.cfg
+++ b/hardware/inputshaper.cfg
@@ -13,3 +13,10 @@ axes_map: x,y,z
 accel_chip: adxl345
 probe_points:
     60,60,10
+
+[input_shaper]
+shaper_type_x = zv
+shaper_freq_x = 85.0
+shaper_type_y = zv
+shaper_freq_y = 93.6
+
