--- a/moonraker.conf
+++ b/moonraker.conf
@@ -31,11 +31,10 @@ enable_auto_refresh: False
 
 [update_manager client mainsail]
 type: web
-#channel: beta
 repo: mainsail-crew/mainsail
 path: ~/mainsail
 
-[update_manager webcamd]
-type: git_repo
-path: ~/crowsnest
-origin: https://github.com/mainsail-crew/crowsnest.git
+#[update_manager webcamd]
+#type: git_repo
+#path: ~/crowsnest
+#origin: https://github.com/mainsail-crew/crowsnest.git
