--- a/klicky/klicky-bed-mesh-calibrate.cfg
+++ b/klicky/klicky-bed-mesh-calibrate.cfg
@@ -15,7 +15,6 @@
 rename_existing: _BED_MESH_CALIBRATE
 description: Perform Mesh Bed Leveling with klicky automount
 gcode:
-
     {% set V = printer["gcode_macro _User_Variables"].verbose %}
     {% if V %}
         { action_respond_info("Bed Mesh Calibrate") }
@@ -24,6 +23,7 @@ gcode:
     _CheckProbe action=query
 	G90
     Attach_Probe
+    _KLICKY_STATUS_MESHING
 
     _BED_MESH_CALIBRATE {% for p in params
            %}{'%s=%s ' % (p, params[p])}{%
