--- a/klicky/klicky-z-tilt-adjust.cfg
+++ b/klicky/klicky-z-tilt-adjust.cfg
@@ -10,14 +10,14 @@
 # This macro home is https://github.com/jlas1/Klicky-Probe
 
 ###################
-## Screws Tilt Adjust
-[gcode_macro SCREWS_TILT_CALCULATE]
-rename_existing: _SCREWS_TILT_CALCULATE
-description: 
+## Z Tilt Adjust
+[gcode_macro Z_TILT_ADJUST]
+rename_existing: _Z_TILT_ADJUST
+description:
 gcode:
     {% set V = printer["gcode_macro _User_Variables"].verbose %}
     {% if V %}
-        { action_respond_info("Screws Tilt Adjust") }
+        { action_respond_info("Z Tilt Adjust") }
     {% endif %}
 
     _CheckProbe action=query
@@ -25,8 +25,8 @@ gcode:
     Attach_Probe
     _KLICKY_STATUS_LEVELING
 
-    _SCREWS_TILT_CALCULATE {% for p in params
+    _Z_TILT_ADJUST {% for p in params
           %}{'%s=%s ' % (p, params[p])}{%
          endfor %}
-
     Dock_Probe
+    G28 Z0
