--- a/printer.cfg
+++ b/printer.cfg
@@ -1,15 +1,15 @@
 [include mainsail.cfg]
 [include macros.cfg]
-[include park.cfg]
-[include print_end.cfg]
-[include print_start.cfg]
 [include variables.cfg]
-[include klicky-probe.cfg]
-[include toolhead.cfg]
-[include inputshaper.cfg]
+[include klicky/*]
+[include hardware/*]
 
 [mcu]
-serial: /dev/ttyAMA0
+serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_440039000150414235363020-if00
+restart_method: command
+
+[mcu ezbrd]
+serial: /dev/serial/by-id/usb-Klipper_samd21g18a_82ED942D3934555020312E392C090FFF-if00
 restart_method: command
 
 [printer]
@@ -30,211 +30,6 @@ gcode:
 ###########################################################################
 ###########################################################################
 ###########################################################################
-
-[temperature_sensor SKR]
-sensor_type: temperature_mcu
-sensor_mcu: mcu
-
-[temperature_sensor Toolhead]
-sensor_type: temperature_mcu
-sensor_mcu: EBBCan
-
-#####################################################################
-#      X/Y Stepper Settings
-#####################################################################
-
-[stepper_x]
-step_pin: PB13
-dir_pin: PB12
-enable_pin: !PB14
-rotation_distance: 40
-microsteps: 32
-full_steps_per_rotation: 200
-endstop_pin: EBBCan: PB6
-position_endstop: 120
-position_max: 120
-homing_speed: 50
-homing_retract_dist: 5
-homing_positive_dir: true
-
-[tmc2209 stepper_x]
-uart_pin: PC11
-tx_pin: PC10
-uart_address: 0
-interpolate: False
-run_current: 0.5
-sense_resistor: 0.110
-stealthchop_threshold: 999999
-
-[stepper_y]
-step_pin: PB10
-dir_pin: PB2
-enable_pin: !PB11
-rotation_distance: 40
-microsteps: 32
-full_steps_per_rotation: 200
-endstop_pin: ^PC1
-position_endstop: 120
-position_max: 120
-homing_speed: 50
-homing_retract_dist: 5
-homing_positive_dir: true
-
-[tmc2209 stepper_y]
-uart_pin: PC11
-tx_pin: PC10
-uart_address: 2
-interpolate: False
-run_current: 0.5
-sense_resistor: 0.110
-stealthchop_threshold: 999999
-
-#####################################################################
-#   Z Stepper Settings
-#####################################################################
-
-[stepper_z]
-step_pin: PB0
-dir_pin: !PC5
-enable_pin: !PB1
-rotation_distance: 8
-microsteps: 16
-endstop_pin: ^PC2
-#position_endstop: -0.10
-position_max: 120
-position_min: -1.5
-homing_speed: 10
-second_homing_speed: 3.0
-homing_retract_dist: 3.0
-
-[tmc2209 stepper_z]
-uart_pin: PC11
-tx_pin: PC10
-uart_address: 1
-interpolate: False
-run_current: 0.37
-sense_resistor: 0.110
-stealthchop_threshold: 999999
-
-#####################################################################
-#   Bed Heater
-#####################################################################
-
-[heater_bed]
-heater_pin: PC9
-sensor_type: Generic 3950
-sensor_pin: PC4
-smooth_time: 3.0
-pwm_cycle_time: 0.0166
-min_temp: 0
-max_temp: 120
-#control: pid
-#pid_kp: 68.453
-#pid_ki: 2.749
-#pid_kd: 426.122
-
-#####################################################################
-#	Fan Control
-#####################################################################
-
-# Chamber Fan
-[fan_generic chamber_fan]
-pin: PB15
-max_power: 1.0
-kick_start_time: 0.5
-off_below: 0.13
-cycle_time: 0.010
-
-#####################################################################
-#  LED Control
-#####################################################################
-[neopixel lights]
-pin: PA8
-chain_count: 20
-color_order: GRB
-initial_RED: 1.0
-initial_GREEN: 1.0
-initial_BLUE: 1.0
-
-[gcode_macro LIGHTS_ON]
-gcode:
-  SET_LED LED="lights" RED=1 BLUE=1 GREEN=1
-
-[gcode_macro LIGHTS_OFF]
-gcode:
-  SET_LED LED="lights" RED=0 BLUE=0 GREEN=0
-
-#####################################################################
-#	Homing and Gantry Adjustment Routines
-#####################################################################
-
-[idle_timeout]
-timeout: 1800
-
-[bed_screws]
-screw1: 60,5
-screw1_name: front screw
-screw2: 5,115
-screw2_name: back left
-screw3: 115,115
-screw3_name: back right
-
-#####################################################################
-#	Macros
-#####################################################################
-
-[gcode_macro PRINT_END]
-#   Use PRINT_END for the slicer ending script - please customize for your slicer of choice
-gcode:
-    M400                           ; wait for buffer to clear
-    G92 E0                         ; zero the extruder
-    G1 E-4.0 F3600                 ; retract filament
-    G91                            ; relative positioning
-
-    #   Get Boundaries
-    {% set max_x = printer.configfile.config["stepper_x"]["position_max"]|float %}
-    {% set max_y = printer.configfile.config["stepper_y"]["position_max"]|float %}
-    {% set max_z = printer.configfile.config["stepper_z"]["position_max"]|float %}
-
-    #   Check end position to determine safe direction to move
-    {% if printer.toolhead.position.x < (max_x - 20) %}
-        {% set x_safe = 20.0 %}
-    {% else %}
-        {% set x_safe = -20.0 %}
-    {% endif %}
-
-    {% if printer.toolhead.position.y < (max_y - 20) %}
-        {% set y_safe = 20.0 %}
-    {% else %}
-        {% set y_safe = -20.0 %}
-    {% endif %}
-
-    {% if printer.toolhead.position.z < (max_z - 2) %}
-        {% set z_safe = 2.0 %}
-    {% else %}
-        {% set z_safe = max_z - printer.toolhead.position.z %}
-    {% endif %}
-
-    G0 Z{z_safe} F3600             ; move nozzle up
-    G0 X{x_safe} Y{y_safe} F20000  ; move nozzle to remove stringing
-    TURN_OFF_HEATERS
-    M107                           ; turn off fan
-    G90                            ; absolute positioning
-    G0 X60 Y{max_y} F3600          ; park nozzle at rear
-	
-[gcode_macro LOAD_FILAMENT]
-gcode:
-   M83                            ; set extruder to relative
-   G1 E30 F300                    ; load
-   G1 E15 F150                    ; prime nozzle with filament
-   M82                            ; set extruder to absolute
-    
-[gcode_macro UNLOAD_FILAMENT]
-gcode:
-   M83                            ; set extruder to relative
-   G1 E10 F300                    ; extrude a little to soften tip
-   G1 E-40 F1800                  ; retract some, but not too much or it will jam
-   M82                            ; set extruder to absolute
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -277,8 +72,4 @@ gcode:
 #*# mesh_x_pps = 2
 #*# max_x = 105.0
 #*#
-#*# [input_shaper]
-#*# shaper_type_x = zv
-#*# shaper_freq_x = 85.0
-#*# shaper_type_y = zv
-#*# shaper_freq_y = 93.6
+
