--- a/printer.cfg
+++ b/printer.cfg
@@ -1,8 +1,16 @@
+[include hardware/bed_heater.cfg]
+[include hardware/fans.cfg]
+[include hardware/inputshaper.cfg]
+[include hardware/leds.cfg]
+[include hardware/steppers_xy.cfg]
+[include hardware/steppers_z.cfg]
+[include hardware/temperature_sensors.cfg]
+[include hardware/toolhead.cfg]
+[include klicky/klicky-probe.cfg]
 [include mainsail.cfg]
 [include macros.cfg]
 [include variables.cfg]
-[include klicky/*]
-[include hardware/*]
+[include z_calibration.cfg]
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_440039000150414235363020-if00
@@ -47,7 +55,7 @@ gcode:
 #*# pid_kd = 584.944
 #*#
 #*# [stepper_z]
-#*# position_endstop = 0.165
+#*# position_endstop = 1.575
 #*#
 #*# [bed_mesh default]
 #*# version = 1
@@ -72,4 +80,5 @@ gcode:
 #*# mesh_x_pps = 2
 #*# max_x = 105.0
 #*#
-
+#*# [probe]
+#*# z_offset = 10.450
