--- a/klicky/klicky-specific.cfg
+++ b/klicky/klicky-specific.cfg
@@ -1,13 +1,30 @@
 [probe]
 pin: EBBCan:PB5
-x_offset: 18
-y_offset: 18
-z_offset: 20
-speed: 5
-lift_speed: 7
+x_offset: -18.5
+y_offset: -18.2
+#z_offset: 8
+speed: 7.0
+lift_speed: 15
 samples: 3
 samples_result: median
-sample_retract_dist: 2
+sample_retract_dist: 1.0
+samples_tolerance: 0.009
+samples_tolerance_retries: 6
+
+[z_tilt]
+z_positions:
+    -48, 14
+    60, 140
+    168, 14
+points:
+    25, 0.25
+    77, 88
+    119.5, 0.25
+
+speed: 75
+horizontal_move_z: 15
+retries: 6
+retry_tolerance: 0.0075
 
 [bed_mesh]
 mesh_min: 20,20
