--- a/klicky/klicky-variables.cfg
+++ b/klicky/klicky-variables.cfg
@@ -29,13 +29,13 @@ variable_max_bed_x:            120    # maximum Bed size avoids doing a probe_ac
 # if a separate Z endstop switch is in
 # use, specify the coordinates of the switch here (Voron).
 # Set to 0 to have the probe move to center of bed
-variable_z_endstop_x:         1000
-variable_z_endstop_y:         1000
+variable_z_endstop_x:           83
+variable_z_endstop_y:          120
 
 #Check the printer specific documentation on klipper Dock/Undock configuration, these are dummy values
 #dock location
-variable_docklocation_x:      1000    # X Dock position
-variable_docklocation_y:      1000    # Y Dock position
+variable_docklocation_x:         0    # X Dock position
+variable_docklocation_y:       120    # Y Dock position
 variable_docklocation_z:      -128    # Z dock position (-128 for a gantry/frame mount)
 
 #The following variables are used if the dock is deployed and retracted via a servo motor
@@ -47,13 +47,13 @@ variable_servo_delay:          250    # This is a delay to wait the servo to rea
 
 #Dock move, final toolhead movement to release the probe on the dock
 #it's a relative move
-Variable_dockmove_x:          1000
-Variable_dockmove_y:             0
+Variable_dockmove_x:             0
+Variable_dockmove_y:           -20
 Variable_dockmove_z:             0
 
 #Attach move. final toolhead movement to attach the probe on the mount
 #it's a relative move
-Variable_attachmove_x:        1000
+Variable_attachmove_x:         -20
 Variable_attachmove_y:           0
 Variable_attachmove_z:           0
 
@@ -80,7 +80,7 @@ variable_home_backoff_x:        10    # how many mm to move away from the X ends
                                       # this is useful for the voron v0 to enable the toolhead to move out of the way to allow an unstricted Y homing
 variable_home_backoff_y:        10    # how many mm to move away from the Y endstop after homing Y
 
-variable_override_homing:       ''    # configures what axis to home first
+variable_override_homing:       'X'    # configures what axis to home first
                                       #  '' = default klicky behavior (tries to avoid the hitting the dock)
                                       # 'X' = forces X to home first
                                       # 'Y' = forces Y to home first
