--- a/macros.cfg
+++ b/macros.cfg
@@ -1,6 +1,12 @@
 #####################################################################
 #	Macros
 #####################################################################
+[gcode_macro G32]
+gcode:
+   G28
+   Z_TILT_ADJUST
+   G28
+
 [gcode_macro PRINT_START]
 gcode:
     {% set bed_temp = params.BED|default(110)|float %}
