--- a/moonraker.conf
+++ b/moonraker.conf
@@ -34,7 +34,22 @@ type: web
 repo: mainsail-crew/mainsail
 path: ~/mainsail
 
+[update_manager client z_calibration]
+type: git_repo
+path: ~/klipper_z_calibration
+origin: https://github.com/protoloft/klipper_z_calibration.git
+install_script: install.sh
+managed_services: klipper
+
 #[update_manager webcamd]
 #type: git_repo
 #path: ~/crowsnest
 #origin: https://github.com/mainsail-crew/crowsnest.git
+
+[update_manager KlipperScreen]
+type: git_repo
+path: /home/pi/KlipperScreen
+origin: https://github.com/jordanruthe/KlipperScreen.git
+env: /home/pi/.KlipperScreen-env/bin/python
+requirements: scripts/KlipperScreen-requirements.txt
+install_script: scripts/KlipperScreen-install.sh
