--- a/hardware/bed_heater.cfg
+++ b/hardware/bed_heater.cfg
@@ -1,11 +1,10 @@
 #####################################################################
 #   Bed Heater
 #####################################################################
-
 [heater_bed]
-heater_pin: PC9
+heater_pin: PD7
 sensor_type: Generic 3950
-sensor_pin: PC4
+sensor_pin: PA1
 smooth_time: 3.0
 pwm_cycle_time: 0.0166
 min_temp: 0
