--- a/hardware/inputshaper.cfg
+++ b/hardware/inputshaper.cfg
@@ -1,7 +1,6 @@
 #####################################################################
 #  Input Shaper
 #####################################################################
-
 [adxl345]
 cs_pin: EBBCan: PB12
 spi_software_sclk_pin: EBBCan: PB10
@@ -14,9 +13,8 @@ accel_chip: adxl345
 probe_points:
     60,60,10
 
-[input_shaper]
-shaper_type_x = zv
-shaper_freq_x = 85.0
-shaper_type_y = zv
-shaper_freq_y = 93.6
-
+#[input_shaper]
+#shaper_type_x = zv
+#shaper_freq_x = 85.0
+#shaper_type_y = zv
+#shaper_freq_y = 93.6
