--- a/hardware/leds.cfg
+++ b/hardware/leds.cfg
@@ -2,7 +2,7 @@
 #  LED Control
 #####################################################################
 [neopixel lights]
-pin: PA8
+pin: PE6
 chain_count: 20
 color_order: GRB
 initial_RED: 1.0
@@ -16,4 +16,3 @@ gcode:
 [gcode_macro LIGHTS_OFF]
 gcode:
   SET_LED LED="lights" RED=0 BLUE=0 GREEN=0
-
