--- a/hardware/steppers_xy.cfg
+++ b/hardware/steppers_xy.cfg
@@ -2,9 +2,9 @@
 #      X/Y Stepper Settings
 #####################################################################
 [stepper_x]
-step_pin: ezbrd:PA4
-dir_pin: ezbrd:PA10
-enable_pin: !ezbrd:PA2
+step_pin: PA15
+dir_pin: PA8
+enable_pin: !PD1
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation: 200
@@ -16,21 +16,20 @@ homing_retract_dist: 5
 homing_positive_dir: true
 
 [tmc2209 stepper_x]
-uart_pin: ezbrd:PA8
-uart_address: 0
+uart_pin: PD0
 interpolate: False
 run_current: 0.5
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
 [stepper_y]
-step_pin: ezbrd:PA9
-dir_pin: ezbrd:PB8
-enable_pin: !ezbrd:PA11
+step_pin: PD4
+dir_pin: PD3
+enable_pin: !PD6
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation: 200
-endstop_pin: ^PC1
+endstop_pin: ^PC3
 position_endstop: 120
 position_max: 120
 homing_speed: 40
@@ -38,8 +37,7 @@ homing_retract_dist: 5
 homing_positive_dir: true
 
 [tmc2209 stepper_y]
-uart_pin: ezbrd:PA8
-uart_address: 1
+uart_pin: PD5
 interpolate: False
 run_current: 0.5
 sense_resistor: 0.110
