--- a/hardware/steppers_z.cfg
+++ b/hardware/steppers_z.cfg
@@ -5,12 +5,12 @@
 ##  Connected to XM
 ##  Endstop connected to Z-STOP
 [stepper_z]
-step_pin: PB13
-dir_pin: !PB12
-enable_pin: !PB14
+step_pin: PE2
+dir_pin: !PE3
+enable_pin: !PE0
 rotation_distance: 32
 microsteps: 64
-endstop_pin: ^PC2
+endstop_pin: ^PC0
 #position_endstop: -0.10
 position_max: 120
 position_min: -5
@@ -19,9 +19,7 @@ second_homing_speed: 3.0
 homing_retract_dist: 3.0
 
 [tmc2209 stepper_z]
-uart_pin: PC11
-#tx_pin: PC10
-uart_address: 0
+uart_pin: PE1
 interpolate: False
 run_current: 0.37
 sense_resistor: 0.110
@@ -30,17 +28,15 @@ stealthchop_threshold: 0
 ##  Z1 Stepper - Rear Center
 ##  Connected to ZM
 [stepper_z1]
-step_pin: PB0
-dir_pin: PC5
-enable_pin: !PB1
+step_pin: PD15
+dir_pin: PD14
+enable_pin: !PC7
 rotation_distance: 32
 microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z1]
-uart_pin: PC11
-#tx_pin: PC10
-uart_address: 1
+uart_pin: PC6
 interpolate: False
 run_current: 0.6
 sense_resistor: 0.110
@@ -49,17 +45,15 @@ stealthchop_threshold: 0
 ##  Z2 Stepper - Front Right
 ##  Connected to YM
 [stepper_z2]
-step_pin: PB10
-dir_pin: !PB2
-enable_pin: !PB11
+step_pin: PD11
+dir_pin: !PD10
+enable_pin: !PD13
 rotation_distance: 32
 microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
-uart_pin: PC11
-#tx_pin: PC10
-uart_address: 2
+uart_pin: PD12
 interpolate: False
 run_current: 0.6
 sense_resistor: 0.110
