--- a/klicky/klicky-specific.cfg
+++ b/klicky/klicky-specific.cfg
@@ -1,6 +1,6 @@
 [probe]
 pin: EBBCan:PB5
-x_offset: -18.5
+x_offset: 18.5
 y_offset: -18.2
 #z_offset: 8
 speed: 7.0
@@ -10,6 +10,15 @@ samples_result: median
 sample_retract_dist: 1.0
 samples_tolerance: 0.009
 samples_tolerance_retries: 6
+
+[z_calibration]
+nozzle_xy_position:   83,120
+switch_xy_position:   107,102
+bed_xy_position:      60,60
+switch_offset:        0.5
+start_gcode:          ATTACH_PROBE
+#before_switch_gcode:
+end_gcode:            DOCK_PROBE
 
 [z_tilt]
 z_positions:
@@ -31,6 +40,8 @@ mesh_min: 20,20
 mesh_max: 100,100
 speed: 100
 horizontal_move_z: 20
-probe_count: 5,5
+probe_count: 5, 5
 relative_reference_index: 12
 move_check_distance: 3
+mesh_pps: 2, 2
+algorithm: bicubic
