--- a/hardware/toolhead.cfg
+++ b/hardware/toolhead.cfg
@@ -19,18 +19,21 @@ rotation_distance: 22.67895
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: EBBCan: PA2
-sensor_type: Generic 3950
+sensor_type: ATC Semitec 104NT-4-R025H42G
 sensor_pin: EBBCan: PA3
-min_temp: 0
+min_temp: 10
 max_temp: 250
 min_extrude_temp: 10
+max_power: 0.9
+#pressure_advance: 0.043
+#pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
 uart_pin: EBBCan: PA15
-#uart_address: 3
+interpolate: False
 run_current: 0.3
+sense_resistor: 0.110
 stealthchop_threshold: 0
-#sense_resistor: 0.110
 
 [fan]
 pin: EBBCan: PA1
