--- a/macros.cfg
+++ b/macros.cfg
@@ -9,19 +9,49 @@ gcode:
 
 [gcode_macro PRINT_START]
 gcode:
-    {% set bed_temp = params.BED|default(110)|float %}
-    {% set extruder_temp = params.EXTRUDER|default(245)|float %}
-    {% set retract = 10 %}
+    # Set vars
+    {% set bed_temp = params.BED|default(100)|float %}
+    {% set extruder_temp = params.EXTRUDER|default(220)|float %}
+    {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %}
+
+    _USER_VARIABLES2
+    {% set St = printer["gcode_macro _USER_VARIABLES2"].travel_speed * 60 %}
+
+    {% set max_x = printer.toolhead.axis_maximum.x|float %}
+    {% set max_y = printer.toolhead.axis_maximum.y|float %}
+    SET_GCODE_OFFSET Z=0 MOVE=1
     SET_FAN_SPEED FAN=chamber_fan SPEED=1
-    G28                            ; home all axes
-    G90
-    M83
-    G1 Z20 F3000                   ; move nozzle away from bed
-    M140 S{bed_temp}               ; Start heating bed
-    M190 S{bed_temp}               ; Wait for bed to reach temperature
-    M109 S{extruder_temp}          ; Set and wait for nozzle to reach temperature
-    BED_MESH_CALIBRATE
-    INTRO_LINE                     ; Prime the nozzle with an intro line
+    CLEAR_PAUSE
+    BED_MESH_CLEAR                    ; clear mesh
+    G28
+    G90                               ; Use absolute coordinates
+    G0 X{max_x|int / 2} Y{max_y|int / 3} Z20 F{St}
+    M117 Heating..
+    M140 S{bed_temp}                  ; Start bed heating
+    M190 S{bed_temp}                  ; Wait for bed to reach temperature
+    M109 S{extruder_temp}             ; Set and wait for nozzle to reach temperature
+    G32
+    M109 S{extruder_temp}             ; Set and wait for nozzle to reach temperature
+    CALIBRATE_Z
+    ADAPTIVE_BED_MESH SIZE={FL_SIZE}
+    INTRO_LINE
+    M117
+
+#[gcode_macro PRINT_START]
+#gcode:
+#    {% set bed_temp = params.BED|default(110)|float %}
+#    {% set extruder_temp = params.EXTRUDER|default(245)|float %}
+#    {% set retract = 10 %}
+#    SET_FAN_SPEED FAN=chamber_fan SPEED=1
+#    G28                            ; home all axes
+#    G90
+#    M83
+#    G1 Z20 F3000                   ; move nozzle away from bed
+#    M140 S{bed_temp}               ; Start heating bed
+#    M190 S{bed_temp}               ; Wait for bed to reach temperature
+#    M109 S{extruder_temp}          ; Set and wait for nozzle to reach temperature
+#    BED_MESH_CALIBRATE
+#    INTRO_LINE                     ; Prime the nozzle with an intro line
 
 [gcode_macro INTRO_LINE]
 gcode:
@@ -29,7 +59,7 @@ gcode:
     G90                            ; Use absolute coordinates
     M83
     G92 E0
-    G1 X40 Y115 Z5 F6000             ; Move the nozzle to the front and near the bed
+    G1 X40 Y110 Z5 F6000             ; Move the nozzle to the front and near the bed
     G1 Z0.7 F300                   ; Move the nozzle very close to the bed
     G1 E4 F900                     ; extrude retract
     G1 X80 E10.0 F500.0            ; intro line
