Initial Tri-Zero v0.610

--- a/config/hardware/temperature_sensors.cfg
+++ b/config/hardware/temperature_sensors.cfg
@@ -1,10 +1,12 @@
 [temperature_sensor RaspberryPi]
 sensor_type: temperature_host
 
-[temperature_sensor ElectricalCabinet]
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: z:ELECTRICAL_CABINET_TEMPERATURE
+# BTT SKR 3 EZ Mainboard
+[temperature_sensor octopus]
+sensor_type: temperature_mcu
+sensor_mcu: mcu
 
-[temperature_sensor Chamber]
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: CHAMBER_TEMPERATURE
+# BTT EBB36
+[temperature_sensor Toolhead]
+sensor_type: temperature_mcu
+sensor_mcu: toolhead
