--- a/config/software/bed_mesh.cfg
+++ b/config/software/bed_mesh.cfg
@@ -6,13 +6,11 @@
 # [(7x7)-1] / 2 = 24
 # [(5x5)-1] / 2 = 12
 speed: 350
-horizontal_move_z: 12
-mesh_min: 10, 25
-mesh_max: 290, 290
+horizontal_move_z: 20
+mesh_min: 20,20
+mesh_max: 100,100
 probe_count: 9, 9
-#fade_end: 10
-#split_delta_z: .01
-#move_check_distance: 3.0
+move_check_distance: 3
 mesh_pps: 2,2
 algorithm: bicubic
 relative_reference_index: 40
