--- a/printer.cfg
+++ b/printer.cfg
@@ -13,7 +13,6 @@
 [include config/hardware/heated_bed.cfg]
 [include config/hardware/lights.cfg]
 [include config/hardware/probe.cfg]
-# [include config/hardware/status_leds.cfg]
 [include config/hardware/temperature_sensors.cfg]
 [include config/hardware/XY.cfg]
 [include config/hardware/Z.cfg]
@@ -24,7 +23,7 @@
 [include config/software/bed_mesh.cfg]
 [include config/software/firmware_rectraction.cfg]
 [include config/software/input_shaper.cfg]
-[include config/software/qgl.cfg]
+[include config/software/z_tilt.cfg]
 [include config/software/z_calibration.cfg]
 
 #####################
