--- a/config/board_pins.cfg
+++ b/config/board_pins.cfg
@@ -1,44 +1,36 @@
-[board_pins mcu_xy]
+[board_pins]
 aliases:
 
 # steppers
-	X_STEP=P2.2 ,  X_DIR=P2.6 ,  X_ENABLE=P2.1 ,  X_TMCUART=P1.10,  X_STOP=P1.27,
-	Y_STEP=P0.19,  Y_DIR=P0.20,  Y_ENABLE=P2.8 ,  Y_TMCUART=P1.9 ,  Y_STOP=P1.25,
-	E_STEP=P2.13,  E_DIR=P0.11,  E_ENABLE=P2.12,  E_TMCUART=P1.4 ,
+	X_STEP=PA15 ,  X_DIR=PA8  ,  X_ENABLE=PD1  ,  X_TMCUART=PD0  ,
+	Y_STEP=PD4  ,  Y_DIR=PD3  ,  Y_ENABLE=PD6  ,  Y_TMCUART=PD5  , Y_STOP=PC3,
+	Z_STEP=PE2  ,  Z_DIR=PE3  ,  Z_ENABLE=PE0  ,  Z_TMCUART=PE1  , Z_STOP=PC0,
+	Z1_STEP=PD15,  Z1_DIR=PD14,  Z1_ENABLE=PC7 ,  Z1_TMCUART=PC6 ,
+	Z2_STEP=PD11,  Z2_DIR=PD10,  Z2_ENABLE=PD13,  Z2_TMCUART=PD12,
 
-# hotend
-	E_HEATER=P2.7, E_TEMPERATURE=P0.24, E_FAN=P2.4,
-	PART_FAN=P2.3,
+# recirculating filter
+	FILTER_FAN=PB7,
 
-# sensor
-	CHAMBER_TEMPERATURE=P0.25
+# bed
+	BED_HEATER=PD7, BED_TEMPERATURE=PA1,
 
+# light
+	LIGHT_OUPUT=PE6,
 
-[board_pins mcu_z]
+[board_pins toolhead]
 mcu: z
 aliases:
 
 # steppers
-	Z_STEP=P2.2  ,  Z_DIR=P2.6  ,   Z_ENABLE=P2.1  ,  Z_TMCUART=P1.10 ,  Z_STOP=P1.25,
-	Z1_STEP=P0.19,  Z1_DIR=P0.20,   Z1_ENABLE=P2.8 ,  Z1_TMCUART=P1.9 ,
-	Z2_STEP=P0.22,  Z2_DIR=P2.11,   Z2_ENABLE=P0.21,  Z2_TMCUART=P1.8 ,
-	Z3_STEP=P2.13,  Z3_DIR=P0.11,   Z3_ENABLE=P2.12,  Z3_TMCUART=P1.4 ,
+	E_STEP=PD0,  E_DIR=PD1,  E_ENABLE=PD2,  E_TMCUART=PA15,
 
-# bed
-	BED_HEATER=P2.3, BED_TEMPERATURE=P0.25, 
+# hotend
+	E_HEATER=PA2, E_TEMPERATURE=PA3, E_FAN=PA0,
+	PART_FAN=PA1,
 
 # probe
-	PROBE_INPUT=P0.10,
-
-# recirculating filter
-	FILTER_FAN=P2.7,	
+	PROBE_INPUT=PB5,
 
 # adxl
-	ADXL_CS=P0.26,	
+	ADXL_CS=PB12,
 
-# light
-	LIGHT_OUPUT=P2.5,
-	STATUS_NEOPIXEL=PD3,
-
-# sensor
-	ELECTRICAL_CABINET_TEMPERATURE=P0.24
