--- a/config/hardware/XY.cfg
+++ b/config/hardware/XY.cfg
@@ -3,13 +3,13 @@ step_pin: X_STEP
 dir_pin: X_DIR
 enable_pin: !X_ENABLE
 rotation_distance: 40
-microsteps: 64
-full_steps_per_rotation:400
-endstop_pin: X_STOP
+microsteps: 32
+full_steps_per_rotation:200
+endstop_pin: toolhead:X_STOP
 position_min: 0
-position_endstop: 300
-position_max: 300
-homing_speed: 60
+position_endstop: 120
+position_max: 120
+homing_speed: 40
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -25,13 +25,13 @@ step_pin: Y_STEP
 dir_pin: Y_DIR
 enable_pin: !Y_ENABLE
 rotation_distance: 40
-microsteps: 64
-full_steps_per_rotation:400
+microsteps: 32
+full_steps_per_rotation:200
 endstop_pin: Y_STOP
 position_min: 0
-position_endstop: 307
-position_max: 307
-homing_speed: 60
+position_endstop: 120
+position_max: 120
+homing_speed: 40
 homing_retract_dist: 5
 homing_positive_dir: true
 
