--- a/config/hardware/extruder.cfg
+++ b/config/hardware/extruder.cfg
@@ -1,34 +1,34 @@
 [extruder]
-step_pin: E_STEP
-dir_pin: E_DIR
-enable_pin: !E_ENABLE
+step_pin: toolhead:E_STEP
+dir_pin: toolhead:E_DIR
+enable_pin: !toolhead:E_ENABLE
 
-# Bontech LGX
-# new_rd = previous_rd * mesured_distance / requested_distance
+# Sherpa Mini
 rotation_distance: 55
-gear_ratio: 45:14, 37:17
-microsteps: 64
+gear_ratio: 50:10
+microsteps: 16
 full_steps_per_rotation: 200
 
+# Revo Voron
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 max_extrude_only_distance: 110
-heater_pin: E_HEATER
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: E_TEMPERATURE
+heater_pin: toolhead:E_HEATER
+sensor_type: ATC Semitec 104NT-4-R025H42G
+sensor_pin: toolhead:E_TEMPERATURE
 min_temp: 10
 max_temp: 270
-max_power: 1.0
+max_power: 0.9
 min_extrude_temp: 172
+pid_kp = 28.122
+pid_ki = 2.083
+pid_kd = 94.909
 control = pid
-pid_kp = 26.015
-pid_ki = 1.770
-pid_kd = 95.603
 pressure_advance: 0.0475
 pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
-uart_pin: E_TMCUART
+uart_pin: toolhead:E_TMCUART
 interpolate: false
 run_current: 0.4
 sense_resistor: 0.110
