--- a/config/hardware/probe.cfg
+++ b/config/hardware/probe.cfg
@@ -1,8 +1,8 @@
 [probe]
-pin: ^z:PROBE_INPUT
-x_offset: 0
-y_offset: 19.75
-z_offset: 6.42
+pin: toolhead:PROBE_INPUT
+x_offset: 18.5
+y_offset: -18.2
+z_offset: 10.45
 speed: 8
 lift_speed: 15
 samples: 2
