--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -1,29 +1,17 @@
 [mcu]
-##	MCU for X/Y/E steppers main MCU
-##	[X in X] - B Motor
-##	[Y in Y] - A Motor
-##	[E in E0] - Extruder
-##--------------------------------------------------------------------
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_05A0FF0AC0846AAFBBCA555EC62000F5-if00
-##--------------------------------------------------------------------
+serial: /dev/serial/by-id/usb-Klipper_stm32h743xx_340020001251303232383230-if00
+restart_method: command
 
-[mcu z]
-##	MCU for Z steppers
-##	[Z in X] - Front Left
-##	[Z1 in Y] - Rear Left
-##	[Z2 in Z] - Rear Right
-##	[Z3 in E0]- Front Right
-##--------------------------------------------------------------------
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_19D0000AC0846AAF8FC8555EC72000F5-if00
-##--------------------------------------------------------------------
+[mcu toolhead]
+canbus_uuid=707a447de264
 
 [printer]
 kinematics: corexy
-max_velocity: 400
-max_accel: 8000
-max_z_velocity: 50
-max_z_accel: 500
-square_corner_velocity: 5.0
+max_velocity: 200
+max_accel: 2000
+max_z_velocity: 15
+max_z_accel: 45
+square_corner_velocity: 6.0
 
 [virtual_sdcard]
 path: ~/gcode_files
