--- a/config/software/input_shaper.cfg
+++ b/config/software/input_shaper.cfg
@@ -1,16 +1,17 @@
-[input_shaper]
+#[input_shaper]
 # Supported shapers: zv, mzv, zvd, ei, 2hump_ei, 3hump_ei
-shaper_freq_x: 56.4
-shaper_type_x: zv
-shaper_freq_y: 38.4
-shaper_type_y: mzv
+#shaper_freq_x: 56.4
+#shaper_type_x: zv
+#shaper_freq_y: 38.4
+#shaper_type_y: mzv
 
 [adxl345]
-spi_bus: ssp1
-cs_pin: z:ADXL_CS
-axes_map: -z,y,x
+cs_pin: toolhead:ADXL_CS
+spi_software_sclk_pin: toolhead:ADXL_CLK
+spi_software_mosi_pin: toolhead:ADXL_MOSI
+spi_software_miso_pin: toolhead:ADXL_MISO
 
 [resonance_tester]
 accel_chip: adxl345
 probe_points:
-    150,150,20
+    60,60,20
