--- a/config/variables.cfg
+++ b/config/variables.cfg
@@ -7,11 +7,11 @@ variable_verbose: True
 # Feedrate setpoints for all the macros
 #######################################
 
-variable_homing_travel_speed: 350
-variable_travel_speed: 350
-variable_z_drop_speed: 30
+variable_homing_travel_speed: 200
+variable_travel_speed: 200
+variable_z_drop_speed: 20
 variable_brush_clean_speed: 130
-variable_probe_dock_speed: 60
+variable_probe_dock_speed: 40
 
 
 #######################################
@@ -19,20 +19,20 @@ variable_probe_dock_speed: 60
 #######################################
 
 # Minimum safe Z height to attach/detach probe
-variable_probe_min_z_travel: 15
+variable_probe_min_z_travel: 20
 
 # Position of the probe dock
-variable_probe_dock_location_xy: 246.7, 306
+variable_probe_dock_location_xy: 0,120
 
 # Positions of the toolhead when docking/undocking the probe
 # See diagram below for help
-variable_probe_before_attach_position: "front"
+variable_probe_before_attach_position: "right"
 variable_probe_after_attach_position : "front"
-variable_probe_before_dock_position : "front" # generaly same as probe_after_attach_position
-variable_probe_after_dock_position : "left"
+variable_probe_before_dock_position : "right" # generaly same as probe_after_attach_position
+variable_probe_after_dock_position : "front"
 
 variable_probe_move_attach_length: 20
-variable_probe_move_dock_length: 50
+variable_probe_move_dock_length: 20
 
 #    Y
 #    ^ 
@@ -57,7 +57,7 @@ variable_force_homing_in_start_print: False
 
 # Z hop before homing to avoid grinding
 # the bed due to the gantry sag
-variable_homing_zhop: 3
+variable_homing_zhop: 5
 
 # margin to avoid the probe dock when homing
 variable_probe_dock_margin_xy: 30, 30
@@ -71,11 +71,11 @@ variable_print_default_soak: 8
 variable_print_default_material: "XXX"
 
 # Prime line start position
-variable_prime_line_xy: 2.5, 20
+variable_prime_line_xy: 5, 5
 
 # Park position used when pause, end_print, etc...
-variable_park_position_xy: 20, 307
-variable_park_lift_z: 50
+variable_park_position_xy: 80,105 
+variable_park_lift_z: 10
 
 # Automatically disable motors in the END_PRINT macro
 variable_disable_motors_in_end_print: True
@@ -88,7 +88,7 @@ variable_disable_motors_in_end_print: True
 # Brush and purge bucket available in the machine
 # If this is not available in the machine, set the following
 # variables to "-1, -1" for safety
-variable_purge_and_brush_enabled: True
+variable_purge_and_brush_enabled: False
 variable_brush_xyz: 77.5, 307, 2 # Position of the brush center for nozzle cleaning
 variable_purge_bucket_xyz: 20, 307, 5 # Purge bucket position
 
@@ -105,7 +105,7 @@ variable_light_intensity_end_print: 5
 
 # If the machine is equiped by a temperature sensor in the chamber
 # it will be used to measure and control the chamber heatsoak
-variable_chamber_temperature_sensor_enabled: True
+variable_chamber_temperature_sensor_enabled: False
 variable_chamber_temperature_sensor_name: "Chamber"
 
 # If using the z_calibration plugin, the z_endstop position is extracted automaticaly
@@ -116,39 +116,6 @@ variable_zcalib_plugin_enabled: True
 #    - remove or comment the file macros > probing > z_calibration.cfg (the CALIBRATE_Z macro)
 #    - Set the machine z_endstop coordinates here !!!
 variable_zendstop_position: -1, -1 # Used only if variable_zcalib_plugin_enabled is set to false !!!
-
-# SteathBurner leds installed in the machine
-variable_status_leds_enabled: False
-variable_status_leds_logo_led_name: "status_leds"
-variable_status_leds_logo_idx: '1'
-variable_status_leds_nozzle_led_name: "status_leds"
-variable_status_leds_nozzle_idx: '2,3'
-
-variable_status_leds_colors: {
-        'logo': {
-            'busy': {'r': 0.4, 'g': 0.0, 'b': 0.0, 'w': 0.0},
-            'cleaning': {'r': 0.0, 'g': 0.02, 'b': 0.5, 'w': 0.0},
-            'calibrating_z': {'r': 0.8, 'g': 0., 'b': 0.35, 'w': 0.0},
-            'heating': {'r': 0.3, 'g': 0.18, 'b': 0.0, 'w': 0.0},
-            'homing': {'r': 0.0, 'g': 0.6, 'b': 0.2, 'w': 0.0},
-            'leveling': {'r': 0.5, 'g': 0.1, 'b': 0.4, 'w': 0.0},
-            'meshing': {'r': 0.2, 'g': 1.0, 'b': 0.0, 'w': 0.0},
-            'off': {'r': 0.0, 'g': 0.0, 'b': 0.0, 'w': 0.0},
-            'printing': {'r': 1.0, 'g': 0.0, 'b': 0.0, 'w': 0.0},
-            'standby': {'r': 0.01, 'g': 0.01, 'b': 0.01, 'w': 0.1},
-        },
-        'nozzle': {
-            'heating': {'r': 0.8, 'g': 0.35, 'b': 0.0, 'w':0.0},
-            'off': {'r': 0.0, 'g': 0.0, 'b': 0.0, 'w': 0.0},
-            'on': {'r': 0.8, 'g': 0.8, 'b': 0.8, 'w':1.0},
-            'standby': {'r': 0.6, 'g': 0.0, 'b': 0.0, 'w':0.0},
-        },
-        'thermal': {
-            'hot': {'r': 1.0, 'g': 0.0, 'b': 0.0, 'w': 0.0},
-            'cold': {'r': 0.3, 'g': 0.0, 'b': 0.3, 'w': 0.0}
-        }
-    }
-
 
 # Do not remove the next line
 gcode:
